added endpoints for get visitor, post visitor, approval, forgot password, send approval mail and card
